tests/rosetta/out/Smalltalk/benfords-law.out
/tmp/benfords-law.st:6: parse error, expected ']'
